Assignment_5/ass5_21CS10057_21CS30058.output
Nonterminals useless in grammar

    argument_expression_list_optional
    assignment_expression_optional
    expression_optional
    pointer_optional
    type_qualifier_list_optional
    identifier_list_optional
    block_item_list_optional
    declaration_list_optional


Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    COMMENT_MULTI
    COMMENT_SINGLE
    PUNCTUATOR
    WS


Rules useless in grammar

  210 argument_expression_list_optional: argument_expression_list
  211                                  | ε

  212 assignment_expression_optional: assignment_expression
  213                               | ε

  214 expression_optional: expression
  215                    | ε

  216 pointer_optional: pointer
  217                 | ε

  218 type_qualifier_list_optional: type_qualifier_list
  219                             | ε

  220 identifier_list_optional: identifier_list
  221                         | ε

  222 block_item_list_optional: block_item_list
  223                         | ε

  224 declaration_list_optional: declaration_list
  225                          | ε


Rules useless in parser due to conflicts

  146 pointer: '*' type_qualifier_list


State 54 conflicts: 2 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 constant: INTEGER_NO
    2         | FLOAT_NO
    3         | ENUMERATION_CONSTANT
    4         | CHARACTER

    5 primary_expression: IDENTIFIER
    6                   | constant
    7                   | STRING
    8                   | '(' expression ')'

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression RIGHT_ARROW IDENTIFIER
   15                   | postfix_expression INCREMENT
   16                   | postfix_expression DECREMENT
   17                   | '(' type_name ')' '{' initializer_list '}'
   18                   | '(' type_name ')' '{' initializer_list ',' '}'

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF '(' type_name ')'

   27 unary_operator: '&'
   28               | '*'
   29               | '+'
   30               | '-'
   31               | '~'
   32               | '!'

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multplicative_expression: cast_expression
   36                         | multplicative_expression '*' cast_expression
   37                         | multplicative_expression '/' cast_expression
   38                         | multplicative_expression '%' cast_expression

   39 additive_expression: multplicative_expression
   40                    | additive_expression '+' multplicative_expression
   41                    | additive_expression '-' multplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LSHIFT additive_expression
   44                 | shift_expression RSHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression LESS_THAN_EQUAL_TO shift_expression
   49                      | relational_expression GREATER_THAN_EQUAL_TO shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression DOUBLE_EQUAL relational_expression
   52                    | relational_expression NOT_EQUAL relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression '&' equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression '^' AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression '|' exclusive_OR_expression

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression N BINARY_AND M inclusive_OR_expression

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression N BINARY_OR M logical_AND_expression

   63 M: ε

   64 N: ε

   65 conditional_expression: logical_OR_expression
   66                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: '='
   70                    | MUL_ASSIGN
   71                    | DIV_ASSIGN
   72                    | MOD_ASSIGN
   73                    | ADD_ASSIGN
   74                    | SUB_ASSIGN
   75                    | LSHIFT_ASSIGN
   76                    | RSHIFT_ASSIGN
   77                    | AND_ASSIGN
   78                    | XOR_ASSIGN
   79                    | OR_ASSIGN

   80 expression: assignment_expression
   81           | expression ',' assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: declaration_specifiers init_declarator_list_optional ';'

   84 declaration_specifiers: storage_class_specifier declaration_specifiers_optional
   85                       | type_specifier declaration_specifiers_optional
   86                       | type_qualifier declaration_specifiers_optional
   87                       | function_specifier declaration_specifiers_optional

   88 declaration_specifiers_optional: declaration_specifiers
   89                                | ε

   90 init_declarator_list_optional: init_declarator_list
   91                              | ε

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list ',' init_declarator

   94 init_declarator: declarator
   95                | declarator '=' initializer

   96 storage_class_specifier: EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | BOOL
  110               | COMPLEX
  111               | IMAGINARY
  112               | enum_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list_optional
  114                         | type_qualifier specifier_qualifier_list_optional

  115 specifier_qualifier_list_optional: specifier_qualifier_list
  116                                  | ε

  117 enum_specifier: ENUM identifier_optional '{' enumerator_list '}'
  118               | ENUM identifier_optional '{' enumerator_list ',' '}'
  119               | ENUM IDENTIFIER

  120 enumerator_list: ENUM
  121                | enumerator_list ',' enumerator

  122 enumerator: IDENTIFIER
  123           | IDENTIFIER '=' constant_expression

  124 type_qualifier: CONST
  125               | RESTRICT
  126               | VOLATILE

  127 function_specifier: INLINE

  128 declarator: pointer direct_declarator
  129           | direct_declarator

  130 direct_declarator: IDENTIFIER
  131                  | '(' declarator ')'
  132                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  133                  | direct_declarator '[' type_qualifier_list ']'
  134                  | direct_declarator '[' assignment_expression ']'
  135                  | direct_declarator '[' ']'
  136                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  137                  | direct_declarator '[' STATIC assignment_expression ']'
  138                  | direct_declarator '[' type_qualifier_list '*' ']'
  139                  | direct_declarator '[' '*' ']'
  140                  | direct_declarator '(' CT parameter_type_list ')'
  141                  | direct_declarator '(' identifier_list ')'
  142                  | direct_declarator '(' CT ')'

  143 CT: ε

  144 pointer: '*' type_qualifier_list
  145        | '*'
  146        | '*' type_qualifier_list
  147        | '*' pointer

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list: parameter_list
  151                    | parameter_list ',' ELLIPSIS

  152 parameter_list: parameter_declaration
  153               | parameter_list ',' parameter_declaration

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list ',' IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initializer: assignment_expression
  160            | '{' initializer_list '}'
  161            | '{' initializer_list ',' '}'

  162 initializer_list: designation_optional initializer
  163                 | initializer_list ',' designation_optional initializer

  164 designation: designator_list '='

  165 designation_optional: designation
  166                     | ε

  167 designator_list: designator
  168                | designator_list designator

  169 designator: '[' constant_expression ']'
  170           | '.' IDENTIFIER

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER ':' statement
  178                  | CASE constant_expression ':' statement
  179                  | DEFAULT ':' statement

  180 compound_statement: '{' block_item_list '}'
  181                   | '{' '}'

  182 block_item_list: block_item
  183                | block_item_list M block_item

  184 block_item: declaration
  185           | statement

  186 expression_statement: expression ';'
  187                     | ';'

  188 selection_statement: IF '(' expression N ')' M statement N
  189                    | IF '(' expression N ')' M statement N ELSE M statement
  190                    | SWITCH '(' expression ')' statement

  191 iteration_statement: WHILE M '(' expression ')' M statement
  192                    | DO M statement M WHILE '(' expression ')' ';'
  193                    | FOR '(' expression_statement M expression_statement ')' M statement
  194                    | FOR '(' expression_statement M expression_statement M expression N ')' M statement

  195 jump_statement: GOTO IDENTIFIER ';'
  196               | CONTINUE ';'
  197               | BREAK ';'
  198               | RETURN expression ';'
  199               | RETURN ';'

  200 translation_unit: external_declaration
  201                 | translation_unit external_declaration

  202 external_declaration: function_definition
  203                     | declaration

  204 function_definition: declaration_specifiers declarator declaration_list CT compound_statement
  205                    | declaration_specifiers declarator CT compound_statement

  206 declaration_list: declaration
  207                 | declaration_list declaration

  208 identifier_optional: IDENTIFIER
  209                    | ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 32
    '%' (37) 38
    '&' (38) 27 54
    '(' (40) 8 11 12 17 18 26 34 131 140 141 142 188 189 190 191 192 193 194
    ')' (41) 8 11 12 17 18 26 34 131 140 141 142 188 189 190 191 192 193 194
    '*' (42) 28 36 138 139 144 145 146 147
    '+' (43) 29 40
    ',' (44) 18 20 81 93 118 121 151 153 157 161 163
    '-' (45) 30 41
    '.' (46) 13 170
    '/' (47) 37
    ':' (58) 66 177 178 179
    ';' (59) 83 186 187 192 195 196 197 198 199
    '<' (60) 46
    '=' (61) 69 95 123 164
    '>' (62) 47
    '?' (63) 66
    '[' (91) 10 132 133 134 135 136 137 138 139 169
    ']' (93) 10 132 133 134 135 136 137 138 139 169
    '^' (94) 56
    '{' (123) 17 18 117 118 160 161 180 181
    '|' (124) 58
    '}' (125) 17 18 117 118 160 161 180 181
    '~' (126) 31
    error (256)
    RIGHT_ARROW (258) 14
    INCREMENT (259) 15 22
    DECREMENT (260) 16 23
    LSHIFT (261) 43
    RSHIFT (262) 44
    LESS_THAN_EQUAL_TO (263) 48
    GREATER_THAN_EQUAL_TO (264) 49
    DOUBLE_EQUAL (265) 51
    NOT_EQUAL (266) 52
    BINARY_AND (267) 60
    BINARY_OR (268) 62
    ELLIPSIS (269) 151
    MUL_ASSIGN (270) 70
    DIV_ASSIGN (271) 71
    MOD_ASSIGN (272) 72
    ADD_ASSIGN (273) 73
    SUB_ASSIGN (274) 74
    LSHIFT_ASSIGN (275) 75
    RSHIFT_ASSIGN (276) 76
    AND_ASSIGN (277) 77
    XOR_ASSIGN (278) 78
    OR_ASSIGN (279) 79
    AUTO (280) 98
    BREAK (281) 197
    CASE (282) 178
    CHAR (283) 101
    CONST (284) 124
    CONTINUE (285) 196
    DEFAULT (286) 179
    DO (287) 192
    DOUBLE (288) 106
    ELSE (289) 189
    ENUM (290) 117 118 119 120
    EXTERN (291) 96
    FLOAT (292) 105
    FOR (293) 193 194
    GOTO (294) 195
    IF (295) 188 189
    INLINE (296) 127
    INT (297) 103
    LONG (298) 104
    REGISTER (299) 99
    RESTRICT (300) 125
    RETURN (301) 198 199
    SHORT (302) 102
    SIGNED (303) 107
    SIZEOF (304) 25 26
    STATIC (305) 97 136 137
    STRUCT (306)
    SWITCH (307) 190
    TYPEDEF (308)
    UNION (309)
    UNSIGNED (310) 108
    VOID (311) 100
    VOLATILE (312) 126
    WHILE (313) 191 192
    BOOL (314) 109
    COMPLEX (315) 110
    IMAGINARY (316) 111
    COMMENT_MULTI (317)
    COMMENT_SINGLE (318)
    IDENTIFIER <symp> (319) 5 13 14 119 122 123 130 156 157 170 177 195 208
    INTEGER_NO <intval> (320) 1
    FLOAT_NO <charval> (321) 2
    STRING <charval> (322) 7
    CHARACTER <charval> (323) 4
    ENUMERATION_CONSTANT <charval> (324) 3
    PUNCTUATOR (325)
    WS (326)
    THEN (327)


Nonterminals, with rules where they appear

    $accept (97)
        on left: 0
    constant <symp> (98)
        on left: 1 2 3 4
        on right: 6
    primary_expression <E> (99)
        on left: 5 6 7 8
        on right: 9
    postfix_expression <Arr> (100)
        on left: 9 10 11 12 13 14 15 16 17 18
        on right: 10 11 12 13 14 15 16 21
    argument_expression_list <intval> (101)
        on left: 19 20
        on right: 12 20
    unary_expression <Arr> (102)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 68
    unary_operator <unaryOperator> (103)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression <Arr> (104)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multplicative_expression <E> (105)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression <E> (106)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression <E> (107)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression <E> (108)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression <E> (109)
        on left: 50 51 52
        on right: 51 53 54
    AND_expression <E> (110)
        on left: 53 54
        on right: 54 55 56
    exclusive_OR_expression <E> (111)
        on left: 55 56
        on right: 56 57 58
    inclusive_OR_expression <E> (112)
        on left: 57 58
        on right: 58 59 60
    logical_AND_expression <E> (113)
        on left: 59 60
        on right: 60 61 62
    logical_OR_expression <E> (114)
        on left: 61 62
        on right: 62 65 66
    M <instr> (115)
        on left: 63
        on right: 60 62 66 183 188 189 191 192 193 194
    N <Stmt> (116)
        on left: 64
        on right: 60 62 66 188 189 194
    conditional_expression <E> (117)
        on left: 65 66
        on right: 66 67 82
    assignment_expression <E> (118)
        on left: 67 68
        on right: 19 20 68 80 81 132 134 136 137 159
    assignment_operator (119)
        on left: 69 70 71 72 73 74 75 76 77 78 79
        on right: 68
    expression <E> (120)
        on left: 80 81
        on right: 8 10 66 81 186 188 189 190 191 192 194 198
    constant_expression (121)
        on left: 82
        on right: 123 169 178
    declaration (122)
        on left: 83
        on right: 184 203 206 207
    declaration_specifiers (123)
        on left: 84 85 86 87
        on right: 83 88 154 155 204 205
    declaration_specifiers_optional (124)
        on left: 88 89
        on right: 84 85 86 87
    init_declarator_list_optional (125)
        on left: 90 91
        on right: 83
    init_declarator_list (126)
        on left: 92 93
        on right: 90 93
    init_declarator <symp> (127)
        on left: 94 95
        on right: 92 93
    storage_class_specifier (128)
        on left: 96 97 98 99
        on right: 84
    type_specifier (129)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 85 113
    specifier_qualifier_list (130)
        on left: 113 114
        on right: 115 158
    specifier_qualifier_list_optional (131)
        on left: 115 116
        on right: 113 114
    enum_specifier (132)
        on left: 117 118 119
        on right: 112
    enumerator_list (133)
        on left: 120 121
        on right: 117 118 121
    enumerator (134)
        on left: 122 123
        on right: 121
    type_qualifier (135)
        on left: 124 125 126
        on right: 86 114 148 149
    function_specifier (136)
        on left: 127
        on right: 87
    declarator <symp> (137)
        on left: 128 129
        on right: 94 95 131 154 204 205
    direct_declarator <symp> (138)
        on left: 130 131 132 133 134 135 136 137 138 139 140 141 142
        on right: 128 129 132 133 134 135 136 137 138 139 140 141 142
    CT (139)
        on left: 143
        on right: 140 142 204 205
    pointer <symtp> (140)
        on left: 144 145 146 147
        on right: 128 147
    type_qualifier_list (141)
        on left: 148 149
        on right: 132 133 136 138 144 146 149
    parameter_type_list (142)
        on left: 150 151
        on right: 140
    parameter_list (143)
        on left: 152 153
        on right: 150 151 153
    parameter_declaration (144)
        on left: 154 155
        on right: 152 153
    identifier_list (145)
        on left: 156 157
        on right: 141 157
    type_name (146)
        on left: 158
        on right: 17 18 26 34
    initializer <symp> (147)
        on left: 159 160 161
        on right: 95 162 163
    initializer_list (148)
        on left: 162 163
        on right: 17 18 160 161 163
    designation (149)
        on left: 164
        on right: 165
    designation_optional (150)
        on left: 165 166
        on right: 162 163
    designator_list (151)
        on left: 167 168
        on right: 164 168
    designator (152)
        on left: 169 170
        on right: 167 168
    statement <Stmt> (153)
        on left: 171 172 173 174 175 176
        on right: 177 178 179 185 188 189 190 191 192 193 194
    labeled_statement <Stmt> (154)
        on left: 177 178 179
        on right: 171
    compound_statement <Stmt> (155)
        on left: 180 181
        on right: 172 204 205
    block_item_list <Stmt> (156)
        on left: 182 183
        on right: 180 183
    block_item <Stmt> (157)
        on left: 184 185
        on right: 182 183
    expression_statement <E> (158)
        on left: 186 187
        on right: 173 193 194
    selection_statement <Stmt> (159)
        on left: 188 189 190
        on right: 174
    iteration_statement <Stmt> (160)
        on left: 191 192 193 194
        on right: 175
    jump_statement <Stmt> (161)
        on left: 195 196 197 198 199
        on right: 176
    translation_unit (162)
        on left: 200 201
        on right: 0 201
    external_declaration (163)
        on left: 202 203
        on right: 200 201
    function_definition (164)
        on left: 204 205
        on right: 202
    declaration_list (165)
        on left: 206 207
        on right: 204 207
    identifier_optional (166)
        on left: 208 209
        on right: 117 118


State 0

    0 $accept: • translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   98 storage_class_specifier: AUTO •

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  101 type_specifier: CHAR •

    $default  reduce using rule 101 (type_specifier)


State 3

  124 type_qualifier: CONST •

    $default  reduce using rule 124 (type_qualifier)


State 4

  106 type_specifier: DOUBLE •

    $default  reduce using rule 106 (type_specifier)


State 5

  117 enum_specifier: ENUM • identifier_optional '{' enumerator_list '}'
  118               | ENUM • identifier_optional '{' enumerator_list ',' '}'
  119               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 209 (identifier_optional)

    identifier_optional  go to state 33


State 6

   96 storage_class_specifier: EXTERN •

    $default  reduce using rule 96 (storage_class_specifier)


State 7

  105 type_specifier: FLOAT •

    $default  reduce using rule 105 (type_specifier)


State 8

  127 function_specifier: INLINE •

    $default  reduce using rule 127 (function_specifier)


State 9

  103 type_specifier: INT •

    $default  reduce using rule 103 (type_specifier)


State 10

  104 type_specifier: LONG •

    $default  reduce using rule 104 (type_specifier)


State 11

   99 storage_class_specifier: REGISTER •

    $default  reduce using rule 99 (storage_class_specifier)


State 12

  125 type_qualifier: RESTRICT •

    $default  reduce using rule 125 (type_qualifier)


State 13

  102 type_specifier: SHORT •

    $default  reduce using rule 102 (type_specifier)


State 14

  107 type_specifier: SIGNED •

    $default  reduce using rule 107 (type_specifier)


State 15

   97 storage_class_specifier: STATIC •

    $default  reduce using rule 97 (storage_class_specifier)


State 16

  108 type_specifier: UNSIGNED •

    $default  reduce using rule 108 (type_specifier)


State 17

  100 type_specifier: VOID •

    $default  reduce using rule 100 (type_specifier)


State 18

  126 type_qualifier: VOLATILE •

    $default  reduce using rule 126 (type_qualifier)


State 19

  109 type_specifier: BOOL •

    $default  reduce using rule 109 (type_specifier)


State 20

  110 type_specifier: COMPLEX •

    $default  reduce using rule 110 (type_specifier)


State 21

  111 type_specifier: IMAGINARY •

    $default  reduce using rule 111 (type_specifier)


State 22

  203 external_declaration: declaration •

    $default  reduce using rule 203 (external_declaration)


State 23

   83 declaration: declaration_specifiers • init_declarator_list_optional ';'
  204 function_definition: declaration_specifiers • declarator declaration_list CT compound_statement
  205                    | declaration_specifiers • declarator CT compound_statement

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36

    $default  reduce using rule 91 (init_declarator_list_optional)

    init_declarator_list_optional  go to state 37
    init_declarator_list           go to state 38
    init_declarator                go to state 39
    declarator                     go to state 40
    direct_declarator              go to state 41
    pointer                        go to state 42


State 24

   84 declaration_specifiers: storage_class_specifier • declaration_specifiers_optional

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_optional)

    declaration_specifiers           go to state 43
    declaration_specifiers_optional  go to state 44
    storage_class_specifier          go to state 24
    type_specifier                   go to state 25
    enum_specifier                   go to state 26
    type_qualifier                   go to state 27
    function_specifier               go to state 28


State 25

   85 declaration_specifiers: type_specifier • declaration_specifiers_optional

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_optional)

    declaration_specifiers           go to state 43
    declaration_specifiers_optional  go to state 45
    storage_class_specifier          go to state 24
    type_specifier                   go to state 25
    enum_specifier                   go to state 26
    type_qualifier                   go to state 27
    function_specifier               go to state 28


State 26

  112 type_specifier: enum_specifier •

    $default  reduce using rule 112 (type_specifier)


State 27

   86 declaration_specifiers: type_qualifier • declaration_specifiers_optional

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_optional)

    declaration_specifiers           go to state 43
    declaration_specifiers_optional  go to state 46
    storage_class_specifier          go to state 24
    type_specifier                   go to state 25
    enum_specifier                   go to state 26
    type_qualifier                   go to state 27
    function_specifier               go to state 28


State 28

   87 declaration_specifiers: function_specifier • declaration_specifiers_optional

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers_optional)

    declaration_specifiers           go to state 43
    declaration_specifiers_optional  go to state 47
    storage_class_specifier          go to state 24
    type_specifier                   go to state 25
    enum_specifier                   go to state 26
    type_qualifier                   go to state 27
    function_specifier               go to state 28


State 29

    0 $accept: translation_unit • $end
  201 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 48
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31


State 30

  200 translation_unit: external_declaration •

    $default  reduce using rule 200 (translation_unit)


State 31

  202 external_declaration: function_definition •

    $default  reduce using rule 202 (external_declaration)


State 32

  119 enum_specifier: ENUM IDENTIFIER •
  208 identifier_optional: IDENTIFIER •

    '{'       reduce using rule 208 (identifier_optional)
    $default  reduce using rule 119 (enum_specifier)


State 33

  117 enum_specifier: ENUM identifier_optional • '{' enumerator_list '}'
  118               | ENUM identifier_optional • '{' enumerator_list ',' '}'

    '{'  shift, and go to state 50


State 34

  130 direct_declarator: IDENTIFIER •

    $default  reduce using rule 130 (direct_declarator)


State 35

  131 direct_declarator: '(' • declarator ')'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36

    declarator         go to state 51
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  144 pointer: '*' • type_qualifier_list
  145        | '*' •
  146        | '*' • type_qualifier_list
  147        | '*' • pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 36

    $default  reduce using rule 145 (pointer)

    type_qualifier       go to state 52
    pointer              go to state 53
    type_qualifier_list  go to state 54


State 37

   83 declaration: declaration_specifiers init_declarator_list_optional • ';'

    ';'  shift, and go to state 55


State 38

   90 init_declarator_list_optional: init_declarator_list •
   93 init_declarator_list: init_declarator_list • ',' init_declarator

    ','  shift, and go to state 56

    $default  reduce using rule 90 (init_declarator_list_optional)


State 39

   92 init_declarator_list: init_declarator •

    $default  reduce using rule 92 (init_declarator_list)


State 40

   94 init_declarator: declarator •
   95                | declarator • '=' initializer
  204 function_definition: declaration_specifiers declarator • declaration_list CT compound_statement
  205                    | declaration_specifiers declarator • CT compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    '='        shift, and go to state 57

    '{'       reduce using rule 143 (CT)
    $default  reduce using rule 94 (init_declarator)

    declaration              go to state 58
    declaration_specifiers   go to state 59
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    CT                       go to state 60
    declaration_list         go to state 61


State 41

  129 declarator: direct_declarator •
  132 direct_declarator: direct_declarator • '[' type_qualifier_list assignment_expression ']'
  133                  | direct_declarator • '[' type_qualifier_list ']'
  134                  | direct_declarator • '[' assignment_expression ']'
  135                  | direct_declarator • '[' ']'
  136                  | direct_declarator • '[' STATIC type_qualifier_list assignment_expression ']'
  137                  | direct_declarator • '[' STATIC assignment_expression ']'
  138                  | direct_declarator • '[' type_qualifier_list '*' ']'
  139                  | direct_declarator • '[' '*' ']'
  140                  | direct_declarator • '(' CT parameter_type_list ')'
  141                  | direct_declarator • '(' identifier_list ')'
  142                  | direct_declarator • '(' CT ')'

    '('  shift, and go to state 62
    '['  shift, and go to state 63

    $default  reduce using rule 129 (declarator)


State 42

  128 declarator: pointer • direct_declarator

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    direct_declarator  go to state 64


State 43

   88 declaration_specifiers_optional: declaration_specifiers •

    $default  reduce using rule 88 (declaration_specifiers_optional)


State 44

   84 declaration_specifiers: storage_class_specifier declaration_specifiers_optional •

    $default  reduce using rule 84 (declaration_specifiers)


State 45

   85 declaration_specifiers: type_specifier declaration_specifiers_optional •

    $default  reduce using rule 85 (declaration_specifiers)


State 46

   86 declaration_specifiers: type_qualifier declaration_specifiers_optional •

    $default  reduce using rule 86 (declaration_specifiers)


State 47

   87 declaration_specifiers: function_specifier declaration_specifiers_optional •

    $default  reduce using rule 87 (declaration_specifiers)


State 48

    0 $accept: translation_unit $end •

    $default  accept


State 49

  201 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 201 (translation_unit)


State 50

  117 enum_specifier: ENUM identifier_optional '{' • enumerator_list '}'
  118               | ENUM identifier_optional '{' • enumerator_list ',' '}'

    ENUM  shift, and go to state 65

    enumerator_list  go to state 66


State 51

  131 direct_declarator: '(' declarator • ')'

    ')'  shift, and go to state 67


State 52

  148 type_qualifier_list: type_qualifier •
